--- a/imdex.html
+++ b/imdex.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My github repo</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
+    <div>
+        <h3>My first website</h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quae consequatur repudiandae sunt doloremque distinctio error amet repellat ullam nam itaque quod tempora vel possimus, deleniti numquam doloribus unde corrupti?
+        </p>
+    </div>
     
 </body>
 </html>
