added the second blog

--- a/imdex.html
+++ b/imdex.html
@@ -13,6 +13,20 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quae consequatur repudiandae sunt doloremque distinctio error amet repellat ullam nam itaque quod tempora vel possimus, deleniti numquam doloribus unde corrupti?
         </p>
     </div>
+    <body>
+    <div>
+        <h3>My second blog</h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quae consequatur repudiandae sunt doloremque distinctio error amet repellat ullam nam itaque quod tempora vel possimus, deleniti numquam doloribus unde corrupti?
+        </p>
+    </div>
+    <body>
+    <div>
+        <h3>My third blog</h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quae consequatur repudiandae sunt doloremque distinctio error amet repellat ullam nam itaque quod tempora vel possimus, deleniti numquam doloribus unde corrupti?
+        </p>
+    </div>
     
 </body>
 </html>
