--- a/imdex.html
+++ b/imdex.html
@@ -27,6 +27,14 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quae consequatur repudiandae sunt doloremque distinctio error amet repellat ullam nam itaque quod tempora vel possimus, deleniti numquam doloribus unde corrupti?
         </p>
     </div>
+    <div>
+        <h3>How to push incremental</h3>
+        <ul>
+           <li>git add"></li> 
+           <li>git commit -m </li>
+           <li>git push</li>
+        </ul>
+    </div>
     
 </body>
 </html>
