added the second blog

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div>
         <h3>How to push incremental</h3>
         <ul>
-           <li>git add"></li> 
+           <li>git add</li> 
            <li>git commit -m </li>
            <li>git push</li>
         </ul>
