added the second blog

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
            <li>git push</li>
         </ul>
     </div>
+    <div>
+        <h3> Hello Bike </h3>
+        <img src="images/bike.jpg" alt="">
+    </div>
     
 </body>
 </html>
